[gd_scene load_steps=22 format=2]

[ext_resource path="res://Resources/Roboto.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/items/items_8x8.png" type="Texture" id=4]
[ext_resource path="res://Scenes/SupportScenes/UI/Stats/StatsBackground.gd" type="Script" id=5]
[ext_resource path="res://Scenes/SupportScenes/UI/PlayerMenu/Nearby.gd" type="Script" id=6]
[ext_resource path="res://Assets/characters/characters_8x8.png" type="Texture" id=7]
[ext_resource path="res://Scenes/SupportScenes/PlayerCharacter/ColorGear.gd" type="Script" id=8]
[ext_resource path="res://Resources/PlayerMenuButton.tres" type="StyleBox" id=9]
[ext_resource path="res://Assets/ui/rectangle_background.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.431373 )

[sub_resource type="DynamicFont" id=54]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=53]

[sub_resource type="Theme" id=38]
PanelContainer/styles/panel = SubResource( 53 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 70, 240, 10, 10 )

[sub_resource type="StyleBoxFlat" id=56]
bg_color = Color( 0, 0, 0, 0.431373 )

[sub_resource type="DynamicFont" id=57]
size = 19
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=58]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=59]

[sub_resource type="Theme" id=60]
PanelContainer/styles/panel = SubResource( 59 )

[sub_resource type="DynamicFont" id=63]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=64]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 384, 128 )
modulate_color = Color( 1, 1, 1, 0.52549 )

[node name="Nearby" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="NearbyTween" type="Tween" parent="."]

[node name="PlayerMenuTween" type="Tween" parent="."]

[node name="NearbyBackground" type="TextureButton" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 400, 180 )
expand = true
script = ExtResource( 5 )

[node name="NearbyContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_right = 296.003
grow_horizontal = 0
custom_constants/separation = 0
alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="NearbyContainer"]
margin_left = 16.0
margin_right = 216.0
margin_bottom = 360.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="NearbyContainer/PanelContainer2"]
margin_right = 200.0
margin_bottom = 360.0
grow_horizontal = 0
custom_constants/margin_bottom = 4

[node name="ResizeContainer" type="VBoxContainer" parent="NearbyContainer/PanelContainer2/MarginContainer"]
margin_right = 200.0
margin_bottom = 356.0
grow_horizontal = 0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 12

[node name="Label" type="Label" parent="NearbyContainer/PanelContainer2/MarginContainer/ResizeContainer"]
margin_right = 200.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 54 )
text = "Nearby Players"
align = 1
valign = 1

[node name="None" type="Label" parent="NearbyContainer/PanelContainer2/MarginContainer/ResizeContainer"]
margin_top = 47.0
margin_right = 200.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 0.54902 )
custom_fonts/font = SubResource( 54 )
text = "None Found!"
align = 1
valign = 1

[node name="NearbyPlayers" type="VBoxContainer" parent="NearbyContainer/PanelContainer2/MarginContainer/ResizeContainer"]
margin_top = 94.0
margin_right = 200.0
margin_bottom = 356.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 3
theme = SubResource( 38 )

[node name="CloseButton" type="TouchScreenButton" parent="NearbyContainer"]
position = Vector2( -47, 4 )
scale = Vector2( 4, 4 )
normal = SubResource( 55 )

[node name="PlayerMenu" type="HBoxContainer" parent="."]
visible = false
anchor_bottom = 1.0
margin_left = -284.0
margin_right = -52.0
custom_constants/separation = 0
alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="PlayerMenu"]
margin_right = 232.0
margin_bottom = 360.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 56 )

[node name="MarginContainer" type="MarginContainer" parent="PlayerMenu/PanelContainer2"]
margin_right = 232.0
margin_bottom = 360.0
custom_constants/margin_right = 16
custom_constants/margin_top = 0
custom_constants/margin_left = 16
custom_constants/margin_bottom = 4

[node name="ResizeContainer" type="VBoxContainer" parent="PlayerMenu/PanelContainer2/MarginContainer"]
margin_left = 16.0
margin_right = 216.0
margin_bottom = 356.0
rect_min_size = Vector2( 200, 0 )

[node name="CharacterInfo" type="VBoxContainer" parent="PlayerMenu/PanelContainer2/MarginContainer/ResizeContainer"]
margin_right = 200.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 130 )
alignment = 1

[node name="Name" type="Label" parent="PlayerMenu/PanelContainer2/MarginContainer/ResizeContainer/CharacterInfo"]
margin_top = 12.0
margin_right = 200.0
margin_bottom = 30.0
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 57 )
text = "WilliamQM"
align = 1

[node name="Character" type="VBoxContainer" parent="PlayerMenu/PanelContainer2/MarginContainer/ResizeContainer/CharacterInfo"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 118.0
size_flags_horizontal = 3
alignment = 1

[node name="Info" type="Label" parent="PlayerMenu/PanelContainer2/MarginContainer/ResizeContainer/CharacterInfo/Character"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 58 )
text = "Level 20 Apprentice"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="PlayerMenu/PanelContainer2/MarginContainer/ResizeContainer/CharacterInfo/Character"]
margin_left = 80.0
margin_top = 44.0
margin_right = 120.0
margin_bottom = 84.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Sprite" type="Sprite" parent="PlayerMenu/PanelContainer2/MarginContainer/ResizeContainer/CharacterInfo/Character/MarginContainer"]
position = Vector2( 20, 20 )
scale = Vector2( 6, 6 )
texture = ExtResource( 7 )
hframes = 4
vframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 80, 40 )
script = ExtResource( 8 )

[node name="Options" type="VBoxContainer" parent="PlayerMenu/PanelContainer2/MarginContainer/ResizeContainer"]
margin_top = 134.0
margin_right = 200.0
margin_bottom = 356.0
size_flags_vertical = 3
theme = SubResource( 60 )
custom_constants/separation = 16
alignment = 1

[node name="Teleport" type="Button" parent="PlayerMenu/PanelContainer2/MarginContainer/ResizeContainer/Options"]
margin_top = 41.0
margin_right = 200.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 36 )
custom_fonts/font = SubResource( 63 )
custom_styles/hover = SubResource( 64 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
text = "Teleport"

[node name="Trade" type="Button" parent="PlayerMenu/PanelContainer2/MarginContainer/ResizeContainer/Options"]
margin_top = 93.0
margin_right = 200.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 36 )
custom_fonts/font = SubResource( 63 )
custom_styles/hover = SubResource( 64 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
text = "Trade"

[node name="Lock" type="Button" parent="PlayerMenu/PanelContainer2/MarginContainer/ResizeContainer/Options"]
margin_top = 145.0
margin_right = 200.0
margin_bottom = 181.0
rect_min_size = Vector2( 0, 36 )
custom_fonts/font = SubResource( 63 )
custom_styles/hover = SubResource( 64 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
text = "Lock"
